# smx-leads

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/smx_leads/: __init__.py  models.py  repository.py  routes_admin.py  routes_public.py  runtime.py  smxcp.py
src/smx_leads/ai/: __init__.py  contracts.py  profiles.py  prompts.py  repository.py  service.py
src/smx_leads/core/: config.py
src/smx_leads/notifications/: __init__.py  emailer.py
src/smx_leads/static/: smx-leads.css
src/smx_leads/templates/admin/: branding.html  home.html  login.html  submission_detail.html  submissions_list.html
src/smx_leads/templates/public/: lead_form.html  thank_you.html
tests/: test_admin_ai_routes.py  test_admin_auth_routes.py  test_admin_branding_routes.py  test_admin_delete_submission_routes.py  test_admin_submissions_routes.py  test_ai_insight_repository.py  test_ai_profile_contract.py  test_ai_service.py  test_config.py  test_mobile_navigation.py  test_notifications.py  test_package_contract_workflow.py  test_public_notification_integration.py  test_public_routes.py  test_repository.py  test_route_namespace_contract.py  test_scaffold_assets_routes.py  test_schema_readiness.py  test_static_assets.py
