[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smx-leads"
version = "0.1.0"
description = "Lead capture and admin inbox plugin for SyntaxMatrix-based projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.3",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.setuptools.package-data]
smx_leads = [
    "templates/admin/*.html",
    "templates/public/*.html",
    "static/*.css",
    "default_assets/*.png",
]
